solc_mutator_ossfuzz_seed_corpus/test_sol/test_649e2f79a0ccbce9946b351970b49097e14afe3db6c4882dfbae7f1467c951aa_9b1f4fd417b9acf953cbd68d1604cba53a7b2c78_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
library L0 {
  function f0() external   
  {
  }
  event ev0(function (bytes27, uint216) internal   returns (uint240)  ep0);
  function f1(uint256 i0) external    returns(address payable o0,bytes31 o1)
  {
    do
    {
    }
    while ((int248(-182210098681259514974085032314160413621689505018187325061215851767337308088) < int248(((int248(226156424291633194186662080095093570025917938800079226639565593765455331327) ** uint64(uint64(13524791934064936461))) / int248(226156424291633194186662080095093570025917938800079226639565593765455331327)))));
  }
  error er0();
  function f2() external   
  {
  }
  error er1(uint16 ep0);
}
function f3()    
{
}
struct St0 {
  address el0;
  bytes18 el1;
  bool el2;
  bytes4[] el3;
}
library L1 {
  function f4(function (address payable) external   returns (int16, bytes6, uint232) i0,int112 i1) public    returns(St0 memory o0,uint256 o1)
  {
  }
  using L0 for *;
}
using L0 for uint;
using L1 for uint;
// ----
// TypeError 3417: (su0.sol:87-148): Internal or recursive type is not allowed as event parameter type.
